fix: add CurrentUserId and ApiResponse
