# content/src/main/java/com/lxp/content/course/interfaces/web/CourseReadController.java
@@ -4,6 +4,7 @@ package com.lxp.content.course.interfaces.web;
 import com.lxp.common.domain.pagination.Page;
 import com.lxp.common.domain.pagination.PageRequest;
 import com.lxp.common.domain.pagination.Sort;
+import com.lxp.common.infrastructure.exception.ApiResponse;
 import com.lxp.content.course.interfaces.web.dto.response.CourseResponse;
 import com.lxp.content.course.interfaces.web.mapper.CourseApplicationFacade;
 import lombok.RequiredArgsConstructor;
@@ -21,12 +22,23 @@ public class CourseReadController {
     private final CourseApplicationFacade facade;
 
     @GetMapping
-    public ResponseEntity<Page<CourseResponse>> getCourses(
+    public ResponseEntity<ApiResponse<Page<CourseResponse>>> getCourses(
             @RequestParam(value = "page", defaultValue = "0") int page,
             @RequestParam(value = "size", defaultValue = "20") int size,
             @RequestParam(value ="sort", defaultValue = "createdAt") String sort,
             @RequestParam(value = "dir", defaultValue = "DESC") String dir
             ) {
-        return ResponseEntity.ok(facade.getCourses(PageRequest.of(page, size, Sort.ofNullable(sort, dir))));
+
+        return ResponseEntity.ok(
+                ApiResponse.success(
+                        facade.getCourses(
+                                PageRequest.of(
+                                        page,
+                                        size,
+                                        Sort.by(Sort.Direction.valueOf(dir.toUpperCase()), sort)
+                                        )
+                                )
+                        )
+                );
     }
 }
